Add Circe vs json4s benchmarks
[info] Benchmark                   Mode  Cnt       Score       Error  Units
[info] JsonDecodeBenchmark.circe   avgt   20  104904.729 ±  6342.238  ns/op
[info] JsonDecodeBenchmark.json4s  avgt   20  395491.854 ± 16227.112  ns/op